src/antlr4/PascatParser.java
// Generated from Pascat.g4 by ANTLR 4.8

    package antlr4;
    import java.util.HashMap;
    import intermediate.symtab.SymtabEntry;
    import intermediate.type.Typespec;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.TreeMap;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, PAWGRAM=24, 
		CONST=25, TYPE=26, ARRAY=27, OF=28, RECORD=29, VAR=30, END=31, DIV=32, 
		MOD=33, AND=34, OR=35, NOT=36, IF=37, ELSE=38, CLAW=39, REPEAT=40, UNTAIL=41, 
		WHILE=42, DO=43, FUR=44, TO=45, DOWNTO=46, MEOW=47, MEOWLN=48, READ=49, 
		READLN=50, PAWCEDURE=51, FUNCTION=52, BEGIN=53, IDENTIFIER=54, INTEGER=55, 
		REAL=56, NEWLINE=57, WS=58, QUOTE=59, CHARACTER=60, STRING=61, COMMENT=62;
	public static final int
		RULE_pawgram = 0, RULE_pawgramHeader = 1, RULE_pawgramParameters = 2, 
		RULE_pawgramIdentifier = 3, RULE_block = 4, RULE_declarations = 5, RULE_constantsPart = 6, 
		RULE_constantDefinitionsList = 7, RULE_constantDefinition = 8, RULE_constantIdentifier = 9, 
		RULE_constant = 10, RULE_sign = 11, RULE_typesPart = 12, RULE_typeDefinitionsList = 13, 
		RULE_typeDefinition = 14, RULE_typeIdentifier = 15, RULE_typeSpecification = 16, 
		RULE_simpleType = 17, RULE_enumerationType = 18, RULE_enumerationConstant = 19, 
		RULE_subrangeType = 20, RULE_arrayType = 21, RULE_arrayDimensionList = 22, 
		RULE_recordType = 23, RULE_recordFields = 24, RULE_variablesPart = 25, 
		RULE_variableDeclarationsList = 26, RULE_variableDeclarations = 27, RULE_variableIdentifierList = 28, 
		RULE_variableIdentifier = 29, RULE_routinesPart = 30, RULE_routineDefinition = 31, 
		RULE_pawcedureHead = 32, RULE_functionHead = 33, RULE_routineIdentifier = 34, 
		RULE_parameters = 35, RULE_parameterDeclarationsList = 36, RULE_parameterDeclarations = 37, 
		RULE_parameterIdentifierList = 38, RULE_parameterIdentifier = 39, RULE_statement = 40, 
		RULE_compoundStatement = 41, RULE_emptyStatement = 42, RULE_statementList = 43, 
		RULE_assignmentStatement = 44, RULE_lhs = 45, RULE_rhs = 46, RULE_ifStatement = 47, 
		RULE_trueStatement = 48, RULE_falseStatement = 49, RULE_clawStatement = 50, 
		RULE_clawBranchList = 51, RULE_clawBranch = 52, RULE_clawConstantList = 53, 
		RULE_clawConstant = 54, RULE_repeatStatement = 55, RULE_whileStatement = 56, 
		RULE_furStatement = 57, RULE_pawcedureCallStatement = 58, RULE_pawcedureName = 59, 
		RULE_argumentList = 60, RULE_argument = 61, RULE_meowStatement = 62, RULE_meowlnStatement = 63, 
		RULE_meowArguments = 64, RULE_meowArgument = 65, RULE_fieldWidth = 66, 
		RULE_decimalPlaces = 67, RULE_readStatement = 68, RULE_readlnStatement = 69, 
		RULE_readArguments = 70, RULE_expression = 71, RULE_simpleExpression = 72, 
		RULE_term = 73, RULE_factor = 74, RULE_variable = 75, RULE_modifier = 76, 
		RULE_indexList = 77, RULE_index = 78, RULE_field = 79, RULE_functionCall = 80, 
		RULE_functionName = 81, RULE_number = 82, RULE_unsignedNumber = 83, RULE_integerConstant = 84, 
		RULE_realConstant = 85, RULE_characterConstant = 86, RULE_stringConstant = 87, 
		RULE_relOp = 88, RULE_addOp = 89, RULE_mulOp = 90;
	private static String[] makeRuleNames() {
		return new String[] {
			"pawgram", "pawgramHeader", "pawgramParameters", "pawgramIdentifier", 
			"block", "declarations", "constantsPart", "constantDefinitionsList", 
			"constantDefinition", "constantIdentifier", "constant", "sign", "typesPart", 
			"typeDefinitionsList", "typeDefinition", "typeIdentifier", "typeSpecification", 
			"simpleType", "enumerationType", "enumerationConstant", "subrangeType", 
			"arrayType", "arrayDimensionList", "recordType", "recordFields", "variablesPart", 
			"variableDeclarationsList", "variableDeclarations", "variableIdentifierList", 
			"variableIdentifier", "routinesPart", "routineDefinition", "pawcedureHead", 
			"functionHead", "routineIdentifier", "parameters", "parameterDeclarationsList", 
			"parameterDeclarations", "parameterIdentifierList", "parameterIdentifier", 
			"statement", "compoundStatement", "emptyStatement", "statementList", 
			"assignmentStatement", "lhs", "rhs", "ifStatement", "trueStatement", 
			"falseStatement", "clawStatement", "clawBranchList", "clawBranch", "clawConstantList", 
			"clawConstant", "repeatStatement", "whileStatement", "furStatement", 
			"pawcedureCallStatement", "pawcedureName", "argumentList", "argument", 
			"meowStatement", "meowlnStatement", "meowArguments", "meowArgument", 
			"fieldWidth", "decimalPlaces", "readStatement", "readlnStatement", "readArguments", 
			"expression", "simpleExpression", "term", "factor", "variable", "modifier", 
			"indexList", "index", "field", "functionCall", "functionName", "number", 
			"unsignedNumber", "integerConstant", "realConstant", "characterConstant", 
			"stringConstant", "relOp", "addOp", "mulOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "'('", "','", "')'", "'='", "'-'", "'+'", "'..'", 
			"'['", "']'", "'}'", "':'", "'<<'", "'>>'", "'=='", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "'*'", "'/'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"PAWGRAM", "CONST", "TYPE", "ARRAY", "OF", "RECORD", "VAR", "END", "DIV", 
			"MOD", "AND", "OR", "NOT", "IF", "ELSE", "CLAW", "REPEAT", "UNTAIL", 
			"WHILE", "DO", "FUR", "TO", "DOWNTO", "MEOW", "MEOWLN", "READ", "READLN", 
			"PAWCEDURE", "FUNCTION", "BEGIN", "IDENTIFIER", "INTEGER", "REAL", "NEWLINE", 
			"WS", "QUOTE", "CHARACTER", "STRING", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascat.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PascatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PawgramContext extends ParserRuleContext {
		public PawgramHeaderContext pawgramHeader() {
			return getRuleContext(PawgramHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public PawgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pawgram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitPawgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PawgramContext pawgram() throws RecognitionException {
		PawgramContext _localctx = new PawgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pawgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			pawgramHeader();
			setState(183);
			block();
			setState(184);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PawgramHeaderContext extends ParserRuleContext {
		public TerminalNode PAWGRAM() { return getToken(PascatParser.PAWGRAM, 0); }
		public PawgramIdentifierContext pawgramIdentifier() {
			return getRuleContext(PawgramIdentifierContext.class,0);
		}
		public PawgramParametersContext pawgramParameters() {
			return getRuleContext(PawgramParametersContext.class,0);
		}
		public PawgramHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pawgramHeader; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitPawgramHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PawgramHeaderContext pawgramHeader() throws RecognitionException {
		PawgramHeaderContext _localctx = new PawgramHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pawgramHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(PAWGRAM);
			setState(187);
			pawgramIdentifier();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(188);
				pawgramParameters();
				}
			}

			setState(191);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PawgramParametersContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(PascatParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PascatParser.IDENTIFIER, i);
		}
		public PawgramParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pawgramParameters; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitPawgramParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PawgramParametersContext pawgramParameters() throws RecognitionException {
		PawgramParametersContext _localctx = new PawgramParametersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pawgramParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(T__2);
			setState(194);
			match(IDENTIFIER);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(195);
				match(T__3);
				setState(196);
				match(IDENTIFIER);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(202);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PawgramIdentifierContext extends ParserRuleContext {
		public SymtabEntry entry = null;
		public TerminalNode IDENTIFIER() { return getToken(PascatParser.IDENTIFIER, 0); }
		public PawgramIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pawgramIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitPawgramIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PawgramIdentifierContext pawgramIdentifier() throws RecognitionException {
		PawgramIdentifierContext _localctx = new PawgramIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pawgramIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			declarations();
			setState(207);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public ConstantsPartContext constantsPart() {
			return getRuleContext(ConstantsPartContext.class,0);
		}
		public TypesPartContext typesPart() {
			return getRuleContext(TypesPartContext.class,0);
		}
		public VariablesPartContext variablesPart() {
			return getRuleContext(VariablesPartContext.class,0);
		}
		public RoutinesPartContext routinesPart() {
			return getRuleContext(RoutinesPartContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(209);
				constantsPart();
				setState(210);
				match(T__1);
				}
			}

			setState(217);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(214);
				typesPart();
				setState(215);
				match(T__1);
				}
			}

			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(219);
				variablesPart();
				setState(220);
				match(T__1);
				}
			}

			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PAWCEDURE || _la==FUNCTION) {
				{
				setState(224);
				routinesPart();
				setState(225);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantsPartContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(PascatParser.CONST, 0); }
		public ConstantDefinitionsListContext constantDefinitionsList() {
			return getRuleContext(ConstantDefinitionsListContext.class,0);
		}
		public ConstantsPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantsPart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitConstantsPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantsPartContext constantsPart() throws RecognitionException {
		ConstantsPartContext _localctx = new ConstantsPartContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constantsPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			match(CONST);
			setState(230);
			constantDefinitionsList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionsListContext extends ParserRuleContext {
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public ConstantDefinitionsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinitionsList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitConstantDefinitionsList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantDefinitionsListContext constantDefinitionsList() throws RecognitionException {
		ConstantDefinitionsListContext _localctx = new ConstantDefinitionsListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constantDefinitionsList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			constantDefinition();
			setState(237);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(233);
					match(T__1);
					setState(234);
					constantDefinition();
					}
					} 
				}
				setState(239);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public ConstantIdentifierContext constantIdentifier() {
			return getRuleContext(ConstantIdentifierContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitConstantDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constantDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240);
			constantIdentifier();
			setState(241);
			match(T__5);
			setState(242);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantIdentifierContext extends ParserRuleContext {
		public Typespec type = null;
		public SymtabEntry entry = null;
		public TerminalNode IDENTIFIER() { return getToken(PascatParser.IDENTIFIER, 0); }
		public ConstantIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascatVisitor ) return ((PascatVisitor<? extends T>)visitor).visitConstantIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantIdentifierContext constantIdentifier() throws RecognitionException {
		ConstantIdentifierContext _localctx = new ConstantIdentifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constantIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(244);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
